--- a/src/components/NumberButton/NumberButton.scss
+++ b/src/components/NumberButton/NumberButton.scss
@@ -7,7 +7,7 @@
   border: 1px solid $colorElements;
 
   font-family: inherit;
-  font-weight: 600;
+  font-weight: $fontWeightSemiBold;
   font-size: 14px;
   line-height: 16px;
 
