--- a/src/components/ProductDetails/CapacitiesButton/CapacitiesButton.scss
+++ b/src/components/ProductDetails/CapacitiesButton/CapacitiesButton.scss
@@ -5,14 +5,13 @@
 
   background-color: $colorWhite;
   border: 1px solid $colorIcons;
-  cursor: pointer;
 
   &:hover:not(.capacity-button--selected) {
     outline: 1px solid $colorPrimary;
   }
 
   &--selected {
-    color: #fff;
+    color: $colorWhite;
     background-color: $colorPrimary;
     border: none;
   }
