--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import "./styles/reset";
-@import "./styles/utils";
+@import './styles/reset';
+@import './styles/utils';
 
 // vertical indentation
 .main {
