--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/vars';
+
 .header {
   $prefix: '.header';
 
@@ -8,7 +10,7 @@
     height: 100vh;
 
     #{$prefix}__top {
-      margin-bottom: 24px;
+      margin-bottom: $marginBottomSmall;
     }
 
     #{$prefix}__menu {
