--- a/src/components/PageNavIcons/PageNavIcons.scss
+++ b/src/components/PageNavIcons/PageNavIcons.scss
@@ -21,6 +21,6 @@
   &--is-half &__icons {
     width: 50%;
     height: auto;
-    border-top: 1px solid #E2E6E9;
+    border-top: 1px solid $colorElements;
   }
 }
