--- a/src/components/PaginationPannel/PaginationPannel.scss
+++ b/src/components/PaginationPannel/PaginationPannel.scss
@@ -1,3 +1,5 @@
+@import '../../styles/utils/vars';
+
 .pagination {
   display: flex;
 
@@ -9,16 +11,16 @@
   }
 
   &__item-switch {
-    border: 1px solid #B4BDC4;
-    color: #313237;
+    border: 1px solid $colorIcons;
+    color: $colorPrimary;
   }
 
   &__item-control {
-    border: 1px solid #E2E6E9;
+    border: 1px solid $colorElements;
   }
 
   &__link {
-    color: #000000;
+    color: $colorBlack;
     line-height: 32px;
   }
 }
