--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -1,4 +1,3 @@
-@import '../../styles/utils/mixins';
 @import '../../styles/utils/vars';
 @import '../../styles/utils/extends';
 
@@ -21,7 +20,7 @@
     object-fit: contain; 
     width: 208px;
     height: 196px;
-    margin-bottom: 24px;
+    margin-bottom: $marginBottomSmall;
   }
 
   &__model {
@@ -66,7 +65,7 @@
 
   &__info-value {
     @extend %smallText;
-    font-weight: 700;
+    font-weight: $fontWeightBold;
     color: $colorPrimary;
   }
 }
