--- a/src/components/ProductDetails/ColoredButton/ColoredButton.scss
+++ b/src/components/ProductDetails/ColoredButton/ColoredButton.scss
@@ -7,13 +7,12 @@
   border-radius: 50%;
   outline: 1px solid $colorElements;
   outline-offset: -1px;
-  cursor: pointer;
 
   &:hover:not(.colored-button--selected) {
     outline: 1px solid #aaa;
   }
 
   &--selected {
-    outline: 1px solid #000;
+    outline: 1px solid $colorBlack;
   }
 }
