--- a/src/components/ProductDetails/TechCharacteristicsItem/TechCharacteristicsItem.scss
+++ b/src/components/ProductDetails/TechCharacteristicsItem/TechCharacteristicsItem.scss
@@ -1,14 +1,16 @@
+@import '../../../styles/utils/vars';
+
 .tech_characteristics {
   display: flex;
   justify-content: space-between;
 
   &__text {
-    font-weight: 600;
+    font-weight: $fontWeightSemiBold;
     line-height: 21px;
-    color: #89939a;
+    color: $colorSecondary;
   
     &--black {
-      color: #313237;
+      color: $colorPrimary;
     }
   }
 }
