--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -24,6 +24,7 @@ hr {
 }
 
 a {
+  color: inherit;
   text-decoration: none;
 }
 
@@ -46,6 +47,7 @@ textarea {
   line-height: inherit;
 }
 
-button {
+button,
+a {
   cursor: pointer;
 }
