--- a/src/components/CartCheckoutButton/CartCheckoutButton.scss
+++ b/src/components/CartCheckoutButton/CartCheckoutButton.scss
@@ -6,6 +6,7 @@
   color: $colorWhite;
   box-shadow: none;
   width: 100%;
+  height: 48px;
   border: 1px solid transparent;
   background: $colorPrimary;
 
