--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -6,6 +6,7 @@ $colorHoverAndBG: #FAFBFC;
 $colorWhite: #FFFFFF;
 $colorBlack: #000000;
 $colorGreen: #27AE60;
+$colorYellow: #FEC132;
 $colorRed: #EB5757;
 $colorBorder: #C4C4C4;
 
