--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,3 +1,5 @@
+@import './vars';
+
 %upperCase {
   font-weight: 700;
   font-size: 12px;
@@ -28,4 +30,22 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+%flexColumnCenter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+%userMessage {
+  background: $colorYellow;
+  border-radius: 4px;
+  width: 50%;
+  height: auto;
+  font-family: 'Manrope', monospace;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: $colorBlack;
 }
