--- a/src/components/PaginationPannel/PaginationPannel.scss
+++ b/src/components/PaginationPannel/PaginationPannel.scss
@@ -8,17 +8,15 @@
     width: 32px;
   }
 
-  &__item-switch {
-    border: 1px solid #B4BDC4;
-    color: #313237;
+  &__item-prev {
+    margin-right: 16px;
+  }
+
+  &__item-next {
+    margin-left: 8px;
   }
 
   &__item-control {
-    border: 1px solid #E2E6E9;
-  }
-
-  &__link {
-    color: #000000;
-    line-height: 32px;
+    margin-right: 8px;
   }
 }
