--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -49,7 +49,8 @@
   font-size: 16px;
   line-height: 24px;
   color: $colorBlack;
-=======
+}
+
 %devicePageTitleSpecs {
   margin-bottom: 48px;
   font-weight: $fontWeightBlack;
@@ -73,7 +74,7 @@
   font-weight: $fontWeightBold;
   font-size: 12px;
   line-height: 15px;
-  text-align: right;  
+  text-align: right;
   color: $colorIcons;
 }
 
