--- a/src/components/CartCheckoutButton/CartCheckoutButton.scss
+++ b/src/components/CartCheckoutButton/CartCheckoutButton.scss
@@ -6,7 +6,6 @@
   color: $colorWhite;
   box-shadow: none;
   width: 100%;
-  height: 48px;
   border: 1px solid transparent;
   background: $colorPrimary;
 
@@ -20,8 +19,7 @@
     color: $colorGreen;
 
     &:hover {
-      // box-shadow: none;
-      box-shadow: 0px 3px 13px rgba(39, 174, 96, 0.4);
+      box-shadow: none;
     }
   }
 }
