--- a/src/components/HeaderTop/HeaderTop.scss
+++ b/src/components/HeaderTop/HeaderTop.scss
@@ -29,7 +29,8 @@
   }
 
   &__logo {
-    display: block;
+    display: flex;
+    align-items: center;
     width: 80px;
     margin-right: 32px;
     margin-left: 16px;
