--- a/src/components/PageNavIcons/PageNavIcons.scss
+++ b/src/components/PageNavIcons/PageNavIcons.scss
@@ -6,11 +6,34 @@
   height: 100%;
 
   &__icons {
+    position: relative;
     display: flex;
     justify-content: center;
     width: 48px;
     height: 48px;
     box-shadow: -1px 0 0 $colorElements;
+
+    &::after {
+      position: absolute;
+      left: 50%;
+      bottom: 50%;
+
+      visibility: hidden;
+
+      content: attr(data-counter);
+      display: flex;
+      width: 14px;
+      height: 14px;
+      align-items: center;
+      justify-content: center;
+
+      border: 1px solid $colorWhite;
+      border-radius: 14px;
+      font-weight: 600;
+      font-size: 9px;
+      color: $colorWhite;
+      background-color: $colorRed;
+    }
 
     @include onDesktop {
       width: 64px;
@@ -18,6 +41,12 @@
     }
   }
 
+  &__icons--is-visible {
+    &::after {
+      visibility: visible;
+    }
+  }
+  
   &--is-half &__icons {
     width: 50%;
     height: auto;
