--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,15 @@
 @import './styles/reset';
 @import './styles/utils';
 
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
 // vertical indentation
 .main {
+  flex-grow: 1;
   padding: 24px 0 56px;
 
   @include onTablet {
