--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -3,6 +3,10 @@
 .header {
   $prefix: '.header';
 
+  position: sticky;
+  top: 0;
+  z-index: 999;
+
   display: flex;
   flex-direction: column;
 
