--- a/src/App.scss
+++ b/src/App.scss
@@ -4,12 +4,12 @@
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  // min-height: 100vh;
 }
 
 // vertical indentation
 .main {
-  flex-grow: 1;
+  // flex-grow: 1;
   padding: 24px 0 56px;
 
   @include onTablet {
@@ -19,10 +19,6 @@
   @include onDesktop {
     padding: 24px 0 80px; 
   }
-}
-
-body {
-  height: 100%;
 }
 
 // horizontal indentation
