--- a/src/App.scss
+++ b/src/App.scss
@@ -4,12 +4,12 @@
 .App {
   display: flex;
   flex-direction: column;
-  // min-height: 100vh;
+  min-height: 100vh;
 }
 
 // vertical indentation
 .main {
-  // flex-grow: 1;
+  flex-grow: 1;
   padding: 24px 0 56px;
 
   @include onTablet {
@@ -23,9 +23,6 @@
 
 // horizontal indentation
 .container {
-  min-height: calc(100vh - 257px);
-  display: flex;
-  flex-direction: column;
   max-width: 1200px;
   margin: 0 auto;
   padding: 0 16px;
