--- a/src/components/HeaderTop/HeaderTop.scss
+++ b/src/components/HeaderTop/HeaderTop.scss
@@ -1,10 +1,9 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/mixins';
+@import '../../styles/utils/extends';
 
 .header-top {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  @extend %flexSpaceBetweenCenter;
   background: $colorWhite;
   box-shadow: 0 1px 0 $colorElements;
 
