--- a/src/components/ArrowButton/ArrowButton.scss
+++ b/src/components/ArrowButton/ArrowButton.scss
@@ -1,10 +1,9 @@
 @import './../../styles/utils/vars';
 @import './../../styles/utils/mixins';
+@import './../../styles/utils/extends';
 
 .arrow-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  @extend %flexCenter;
   
   width: 32px;
   height: 32px;
