--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,10 +1,9 @@
 @import '../../styles/utils/mixins';
+@import '../../styles/utils/extends';
 
 .banner {
+  @extend %flexSpaceBetweenCenter;
   min-width: 320px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 
   @include onTablet {
     gap: 19px;
