--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -52,9 +52,7 @@
   }
 
   &__info-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @extend %flexSpaceBetweenCenter;
     margin-bottom: 8px;
   }
 
