--- a/src/components/SliderPhotos/SliderPhotos.scss
+++ b/src/components/SliderPhotos/SliderPhotos.scss
@@ -1,10 +1,9 @@
-@import '../../styles/utils/mixins';
 @import '../../styles/utils/vars';
+@import '../../styles/utils/mixins';
+@import '../../styles/utils/extends';
 
 .slider-photos {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @extend %flexColumnCenter;
 
   @include onTabletAndDesktop {
     flex-direction: row-reverse;
