--- a/src/components/SliderProducts/SliderProducts.scss
+++ b/src/components/SliderProducts/SliderProducts.scss
@@ -1,13 +1,12 @@
 @import '../../styles/utils/vars';
+@import '../../styles/utils/extends';
 
 .slider-products {
   margin: 0 auto;
   transition: $animationDuration all ease-out;
 
   &__label {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @extend %flexSpaceBetweenCenter;
 
     margin-bottom: 28px;
   }
