--- a/src/pages/CartPage/CartPage.scss
+++ b/src/pages/CartPage/CartPage.scss
@@ -1,11 +1,9 @@
-@import './../../styles/utils/mixins';
 @import './../../styles/utils/vars';
+@import './../../styles/utils/mixins';
 @import './../../styles/utils/extends';
 
 .cartPage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  @extend %flexColumnCenter;
   justify-content: center;
 
   @include onDesktop {
