--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -39,6 +39,18 @@
   align-items: center;
 }
 
+%flexSpaceBetweenCenter {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+%flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 %userMessage {
   background: $colorYellow;
   border-radius: 4px;
