--- a/src/styles/utils/grid.scss
+++ b/src/styles/utils/grid.scss
@@ -34,6 +34,12 @@
   }
 
   &__item {
+    &--attach-to-end {
+      @include onTablet {
+        grid-column-start: -1;
+      }
+    }
+
     @for $start from 1 through 4 {
       @for $end from $start through 4 {
         &--mobile-#{$start}-#{$end} {
