--- a/src/components/SliderProducts/SliderProducts.scss
+++ b/src/components/SliderProducts/SliderProducts.scss
@@ -2,7 +2,6 @@
 @import '../../styles/utils/extends';
 
 .slider-products {
-  margin: 0 auto;
   transition: $animationDuration all ease-out;
 
   &__container {
@@ -16,6 +15,25 @@
 
     @include onDesktop {
       width: 100%;
+    }
+
+    .slick-track {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 272px); // 212px
+      grid-auto-flow: column dense;
+      gap: 16px;
+
+      @include onTablet {
+        grid-template-columns: repeat(auto-fit, 272px); // 237px
+      }
+
+      @include onDesktop {
+        grid-template-columns: repeat(auto-fit, 272px);
+      }
+    }
+
+    .slick-track::before {
+      display: none;
     }
   }
 
