--- a/src/components/ArrowButton/ArrowButton.scss
+++ b/src/components/ArrowButton/ArrowButton.scss
@@ -30,17 +30,16 @@
 
   &--is-long {
     display: none;
+    height: 100%;
 
     @include onTablet {
       display: block;
       width: 32px;
-      height: 190px;
     }
 
     @include onDesktop {
       display: block;
       width: 32px;
-      height: 400px;
     }
   }
 }
