--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -20,32 +20,35 @@
 
     @include onTablet {
       width: 100%;
-      height: 189px;
+      aspect-ratio: 26 / 10;
       margin-left: 0;
       margin-right: 0;
     }
 
     @include onDesktop {
       width: 1040px;
-      height: 400px;
+      aspect-ratio: 26 / 10;
       margin-left: 0;
       margin-right: 0;
     }
+
+    .slick-list {
+      width: 100%;
+    }
   }
 
-  &__button {
+  &__button-arrow {
     display: none;
+    height: 100%;
 
     @include onTablet {
       display: block;
       width: 32px;
-      height: 190px;
     }
 
     @include onDesktop {
       display: block;
       width: 32px;
-      height: 400px;
     }
 
     cursor: pointer;
@@ -80,8 +83,4 @@
       background-color: $colorPrimary;
     }
   }
-}
-
-.slick-list {
-  width: 100%;
 }
