--- a/src/components/ContactCard/ContactCard.scss
+++ b/src/components/ContactCard/ContactCard.scss
@@ -6,6 +6,7 @@
   gap: 15px;
   width: 350px;
   padding: 15px 20px;
+  transition: box-shadow, transform $animationDuration ease-in;
 
   &__image {
     width: 100px;
@@ -33,5 +34,13 @@
         color: $colorYellow;
       }
     }
+  }
+}
+
+@include onTabletAndDesktop {
+  .contact_card:hover {
+    box-shadow: 0px 2px 16px rgba(0, 0, 0, 0.1);
+    transition: box-shadow, transform $animationDuration ease-out;
+    transform: scale(1.06);
   }
 }
