--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -2,7 +2,6 @@
 
 .banner {
   @extend %flexSpaceBetweenCenter;
-  box-sizing: border-box;
   min-width: 320px;
 
   @include onTablet {
@@ -55,7 +54,7 @@
   }
 
   &__image {
-    object-fit: cover;
+    object-fit: contain;
   }
 
   &__paging {
