Implement basic theme switching

--- a/src/components/ArrowButton/ArrowButton.scss
+++ b/src/components/ArrowButton/ArrowButton.scss
@@ -21,7 +21,7 @@
   }
 
   &:not(.button--disabled):hover {
-    border-color: $colorPrimary;
+    border-color: var(--primaryColor);
   }
 
   &--is-forward {
