--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -77,7 +77,7 @@
     }
 
     &.slick-active {
-      background-color: $colorPrimary;
+      background-color: var(--primaryColor);
     }
   }
 }
