--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,10 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+
+  & * {
+    background-color: var(--whiteColor);
+  }
 }
 
 // vertical indentation
