--- a/src/components/CartCheckoutButton/CartCheckoutButton.scss
+++ b/src/components/CartCheckoutButton/CartCheckoutButton.scss
@@ -4,7 +4,7 @@
 
 .checkout-button {
   @extend %buttonText;
-  color: $colorWhite;
+  color: var(--whiteColor);
   box-shadow: none;
   width: 100%;
   height: 48px;
@@ -14,7 +14,7 @@
   }
 
   border: 1px solid transparent;
-  background: $colorPrimary;
+  background: var(--primaryColor);
 
   &:hover {
     box-shadow: 0px 3px 13px rgba(23, 32, 49, 0.4);
