--- a/src/components/ProductDetails/ColoredButton/ColoredButton.scss
+++ b/src/components/ProductDetails/ColoredButton/ColoredButton.scss
@@ -3,7 +3,7 @@
 .colored-button {
   width: 32px;
   height: 32px;
-  border: 3px solid $colorWhite;
+  border: 3px solid var(--whiteColor);
   border-radius: 50%;
   outline: 1px solid $colorElements;
   outline-offset: -1px;
