--- a/src/components/ShopByCategory/ShopByCategory.scss
+++ b/src/components/ShopByCategory/ShopByCategory.scss
@@ -11,7 +11,7 @@
     font-weight: 800;
     font-size: 22px;
     line-height: 140%;
-    color: $colorPrimary;
+    color: var(--primaryColor);
     
     @include onTabletAndDesktop {
       font-size: 32px;
