--- a/src/components/SliderPhotos/SliderPhotos.scss
+++ b/src/components/SliderPhotos/SliderPhotos.scss
@@ -74,7 +74,7 @@
     }
 
     & .swiper-slide-thumb-active img {
-      border-color: $colorPrimary;
+      border-color: var(--primaryColor);
     }
   }
 
@@ -110,7 +110,7 @@
     cursor: pointer;
 
     &:hover {
-      border-color: $colorPrimary;
+      border-color: var(--primaryColor);
     }
   }
 }
