--- a/src/pages/DeviceDetailsPage/DeviceDetailsAbout/DeviceDetailsAbout.scss
+++ b/src/pages/DeviceDetailsPage/DeviceDetailsAbout/DeviceDetailsAbout.scss
@@ -30,7 +30,7 @@
       font-weight: $fontWeightBold;
       font-size: 20px;
       line-height: 26px;
-      color: $colorPrimary;
+      color: var(--primaryColor);
     }
 
     &__text {
