--- a/src/pages/DeviceDetailsPage/DeviceDetailsPage.scss
+++ b/src/pages/DeviceDetailsPage/DeviceDetailsPage.scss
@@ -15,7 +15,7 @@
     line-height: 41px;
     letter-spacing: -0.01em;
 
-    color: $colorPrimary;
+    color: var(--primaryColor);
   }
 
   &__id {
