--- a/src/pages/DeviceDetailsPage/DeviceDetailsSelector/DeviceDetailsSelector.scss
+++ b/src/pages/DeviceDetailsPage/DeviceDetailsSelector/DeviceDetailsSelector.scss
@@ -53,7 +53,7 @@
       line-height: 41px;
       letter-spacing: -0.01em;
   
-      color: $colorPrimary;
+      color: var(--primaryColor);
     }
   
     &__old {
