--- a/src/components/LoadingComponents/DeviceDetailsLoadPage/DeviceDetailsLoadPage.scss
+++ b/src/components/LoadingComponents/DeviceDetailsLoadPage/DeviceDetailsLoadPage.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/utils/extends';
 @import '../../../styles/utils/mixins';
 
-.device-details_load {
+.device-details-load {
   &__breadcrumbs {
     margin-bottom: $marginBottomMiddle;
   }
@@ -10,6 +10,7 @@
   &__title {
     margin-bottom: $marginBottomMiddle;
     font-size: 32px;
+    line-height: 41px;
   }
 
   &__id {
@@ -66,6 +67,7 @@
   }
 
   &__colours {
+    box-sizing: content-box;
     margin-bottom: $marginBottomSmall;
 
     &__text {
@@ -83,7 +85,7 @@
   }
 
   &__capacity {
-    margin-bottom: 32px;
+    margin-bottom: 29px;
 
     &__selector {
       margin-bottom: $marginBottomSmall;
@@ -96,6 +98,7 @@
 
   &__price {
     margin-bottom: $marginBottomTheSmallest;
+    line-height: 41px;
   }
 
   &__buttons {
