Fix breadcrumbs for view tablets and accessories

--- a/src/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/components/Breadcrumbs/Breadcrumbs.scss
@@ -19,6 +19,8 @@
     display: flex;
     color: black;
     text-decoration: none;
+    text-transform: capitalize;
+
     cursor: pointer;
 
     &:hover {
