Close menu after option choose

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,7 @@
 
     #{$prefix}__top {
       margin-bottom: $marginBottomSmall;
+      transition: margin-bottom 0.3s ease;
     }
 
     #{$prefix}__menu {
