Add another cart design, fixes on device details page and erro page generator, change of loader

--- a/src/components/CartUserMessage/CartUserMessage.scss
+++ b/src/components/CartUserMessage/CartUserMessage.scss
@@ -1,24 +1,6 @@
 @import '../../styles/utils/extends';
-@import '../../styles/utils/vars';
 
-.user-message {
-  @extend %flexTechCharacteristics;
+.cart_user_message {
+  @extend %flexCenter;
   width: 100%;
-  align-items: center;
-
-  &__image {
-    margin-bottom: $marginBottomMiddle;
-  }
-
-  &__text {
-    width: 50%;
-    height: auto;
-
-    background: $colorBorder;
-    font-size: 16px;
-    line-height: 40px;
-    color: $colorBlack;
-    text-align: center;
-    letter-spacing: 4px;
-  }
 }
