--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -1,26 +1,6 @@
 @import '../../styles/utils/vars';
 @import '../../styles/utils/extends';
 
-.Loader {
+.loader {
   @extend %flexCenter;
-  width: 100%;
-
-  &__content {
-    border-radius: 50%;
-    width: 2em;
-    height: 2em;
-    margin: 1em auto;
-    border: 0.3em solid #ddd;
-    border-left-color: $colorBlack;
-    animation: load8 1.2s infinite linear;
-  }
-}
-
-@keyframes load8 {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
