--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -34,6 +34,16 @@
     .slick-list {
       width: 100%;
     }
+
+    &--skeleton {
+      @include onPhone {
+        height: 320px;
+      }
+     
+      @include onPhone {
+        height: 320px;
+      }
+    }
   }
 
   &__button-arrow {
