--- a/src/components/DropDown/DropDown.scss
+++ b/src/components/DropDown/DropDown.scss
@@ -5,6 +5,8 @@
   @extend %bodyText;
   position: relative;
 
+  transition: all $animationDuration ease-out;
+
   &__description {
     @extend %smallText;
     position: absolute;
@@ -19,7 +21,6 @@
   border: $dropDownBorder solid $colorIcons;
 
   color: $colorPrimary;
-  transition: all $animationDuration ease-out;
   cursor: pointer;
 
   &__text {
@@ -44,6 +45,10 @@
 
     &--closed {
       display: none;
+    }
+
+    &--is-transition {
+      transform: translateY(100%);
     }
 
       &__item {
