--- a/src/components/BackButton/BackButton.scss
+++ b/src/components/BackButton/BackButton.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: row;
   margin-top: 40px;
-  align-items: end;
+  align-items: flex-end;
   font-weight: normal;
   font-size: 12px;
   color: $colorSecondary;
