--- a/src/components/ProductCard/ProductCard.scss
+++ b/src/components/ProductCard/ProductCard.scss
@@ -44,7 +44,7 @@
   &__model {
     @extend %buttonText;
     color: $colorPrimary;
-    max-height: 42px;
+    height: 42px;
     margin-bottom: 8px;
     
     overflow: hidden;
